kubernetes-stack/config-yaml/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ai-loadbalancer
  labels:
    name: ai-loadbalancer
